finish Java